--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "reactjs-popup": "^2.0.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass": "^1.72.0"
