--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,7 @@
         "new-cap": ["error", {"capIsNewExceptions": ["Router"]}],
         "no-console": 0,
         "import/no-unresolved": [2, { "caseSensitive": false } ],
-        "no-unused-vars": ["error", { "vars": "all", "args": "none" }],
+        "no-unused-vars": ["error", { "varsIgnorePattern": "React" }],
         "arrow-body-style": 0,
         "one-var": ["error", { "uninitialized": "always", "initialized": "never" }],
         "one-var-declaration-per-line": ["error", "initializations"],
