--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
+    "@babel/eslint-parser": "^7.24.1",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^5.2.1",
-    "eslint": "^7.24.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.29.1",
