--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
   },
   "dependencies": {
     "axios": "^0.28.0",
+    "chart.js": "^4.4.2",
     "lodash.omit": "^4.5.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
