--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.28.0",
+    "firebase": "^10.11.0",
     "lodash.omit": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
