--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^5.16.1",
     "axios": "^0.28.0",
     "lodash.omit": "^4.5.0",
     "react": "^17.0.2",
+    "react-dnd": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
