--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lodash.omit": "^4.5.0",
     "react": "^17.0.2",
     "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
@@ -64,6 +65,7 @@
     "reactjs-popup": "^2.0.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.14.1",
     "sass": "^1.72.0"
   }
 }
