--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^5.2.1",
     "eslint": "^7.24.0",
@@ -59,6 +60,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
