--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "build": "NODE_ENV=production webpack",
     "clean": "rimraf dist"
   },
+  "browser": {
+    "react-oauth/google": false
+  },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -52,6 +55,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-oauth/google": "^0.12.1",
     "antd": "^5.16.1",
     "axios": "^0.28.0",
     "firebase": "^10.11.0",
